fix the external link icons, they were really badly aligned

--- a/_sass/_people.scss
+++ b/_sass/_people.scss
@@ -28,7 +28,7 @@
 
 
 .list-inline {
-  margin-left: 10px;
+  margin-top: 10px;
 }
 
 .list-inline i.fa {
